--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ vulture = "==2.5"
 pytest = "==7.1.2"
 flask = "==2.2.1"
 gunicorn = "==20.1.0"
+python-dotenv = "==0.21.0"
 
 [requires]
 python_version = "3.9"
